objects/copadoQuality__Compliance_Rule__c.object
<CustomObject>
    <description>This object stores the compliance rule definition.</description>
    <fields>
        <fullName>copadoQuality__Action__c</fullName>
        <label>Action</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abort Process</fullName>
                    <default>true</default>
                    <label>Abort Process</label>
                </value>
                <value>
                    <fullName>Continue with alert</fullName>
                </value>
                <value>
                    <fullName>Document Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copadoQuality__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copadoQuality__ConfigJSON__c</fullName>
        <label>ConfigJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Error_Message__c</fullName>
        <description>A text box to write the condition of rule violation. Displays the message when the rule is triggered.
For ex. ‘Standard profile to have no access of customer’s PII fields’.</description>
        <inlineHelpText>A text box to write the condition of rule violation. Displays the message when the rule is triggered.
For ex. ‘Standard profile to have no access of customer’s PII fields’.</inlineHelpText>
        <label>Error Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Extension_Configuration__c</fullName>
        <label>Extension Configuration</label>
        <referenceTo>copado__ExtensionConfiguration__c</referenceTo>
        <relationshipLabel>Compliance Rules</relationshipLabel>
        <relationshipName>Compliance_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Risk_Detail__c</fullName>
        <label>Risk Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Rule_Name__c</fullName>
        <label>Rule Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Severity__c</fullName>
        <label>Severity</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                    <default>true</default>
                    <label>Critical</label>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copadoQuality__XPath_Expression__c</fullName>
        <label>XPath Expression</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Compliance Rule</label>
    <nameField>
        <displayFormat>CCH [Default] - {0000}</displayFormat>
        <label>Rule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>